added plugin for javafx