@@ -20,7 +20,23 @@
             <version>2024.2025</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>nl.han.jefmk.EleSlime</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics,javafx.media</option>
+                        <option>-Djavafx.media.overridenativelib=true</option>
+                        <option>--add-opens=java.base/sun.misc=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <profiles>
         <profile>
             <id>arm</id>
